--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@ Marcus Lower            </a>
 <hr>
 <h2>News</h2>
 <p><div style="height:360px;width:95%;border:0px solid #333;font:14px/26px Helvetica Neue,Helvetica,Arial,sans-serif;overflow:auto;">
+<ul style="list-style-type:disc;">
+<!-- <li>Apr 24 2020: <i>Spectropolarimetric properties of Swift J1818.0-1607: a 1.4 s radio magnetar</i> submitted to ApJ Letters. Read the pre-print here: X. </li> -->
+<li>Mar 25 2020: Multi-band follow up observations of the new magnetar with Parkes - <a href="http://www.astronomerstelegram.org/?read=13587">ATel #13587</a>. </li>
+<li>Mar 17 2020: The new magentar <a href="http://www.astronomerstelegram.org/?read=13553">emits radio pulses</a>! We followed up this latest discovery by observing it with the MeerKAT telesope - <a href="http://www.astronomerstelegram.org/?read=13562">ATel #13562</a>. </li>
+<li>Mar 13 2020: A new magnetar called Swift J1818.0-1607 has been found by the Swift satellite (<a href="https://gcn.gsfc.nasa.gov/gcn3/27373.gcn3">GCN #27373</a>) and confirmed by the NICER X-ray telesope - <a href="http://www.astronomerstelegram.org/?read=13551">ATel #13551</a>. </li>
+<li>Feb 28 2020: Paper accepted - <i>The UTMOST pulsar timing programme II: Timing noise across the pulsar population</i> will soon be published in MNRAS. You can read the accepted manuscript <a href="https://arxiv.org/abs/2002.12481">here</a>. </li>
+<li>Feb 26 2020: Today I was invited to give the weekly ATNF colloquium, where I spoke about <a href="https://www.atnf.csiro.au/news/news.php?action=show_item&item_id=1777"><i>Massive scale pulsar timing with the Molonglo Observatory Synthesis Telescope</a>.</li>
+<li>Feb 16 2020: I'm up in Sydney to visit the Australia Telescope National Facility in Marsfield for three weeks. </li>
 <li>Dec 23 2019: <a href="http://www.astronomerstelegram.org/?read=13363">ATel #13363</a> - A Christmas FRB found by UTMOST! </li>
 <li>Dec 18 2019: I found a glitch in the pulsar PSR J0908−4913 using UTMOST! This is a pulsar that has been observed for over 20 years, and had never been seen to glitch. You can read the research note <a href="https://iopscience.iop.org/article/10.3847/2515-5172/ab621d">here</a>, or the post on the <a href"http://astronomy.swin.edu.au/research/utmost/?p=1805">UTMOST website</a>.</li>
 <li>Nov 18 2019: I am at the <a href="https://www.ozgrav.org/2019-ozgrav-annual-retreat.html">3rd OzGrav annual retreat</a> in Lorne, Australia this week.</li>
@@ -126,6 +134,7 @@ Marcus Lower            </a>
 <li>Jun 17 2018: 1st paper "Measuring eccentricity in binary black hole inspirals with gravitational waves" submitted to PRD (<a href="https://arxiv.org/abs/1806.05350">arXiv:1806.05350</a>).</li>
 <li>Mar 26 2018: started internship at Swinburne University of Technology</li>
 <li>Dec 3 2017: finished my undergrad with 1st class honours!</li>
+</ul>
 </div></p>
 <hr>
         </div>
