--- a/pages/publications.html
+++ b/pages/publications.html
@@ -109,6 +109,10 @@ Marcus Lower            </a>
 <h5>Marcus E. Lower, Ryan M. Shannon, Simon Johnston and Matthew Bailes (2020)</h5>
 <p>Submitted to Astrophys. J. Lett.</p>
 <hr>
+<h4>The Parkes Pulsar Timing Array Project: Second data release</h4>
+<h5>Matthew Kerr, et al. (2020)</h5>
+<p>Accepted to Publ. Astron. Soc. Aust., <a href="https://arxiv.org/abs/2003.09780">arXiv:2003.09780</a>.</p>
+<hr>
 <h4>Multi-band observations of Swift J1818.0−1607 with Parkes</h4>
 <h5>Marcus E. Lower and Ryan M. Shannon (2020)</h5>
 <p><a href="http://www.astronomerstelegram.org/?read=13587">The Astronomer's Telegram #13587</a>.</p>
@@ -116,6 +120,14 @@ Marcus Lower            </a>
 <h4>MeerKAT observation of the radio magnetar candidate Swift J1818.0−1607</h4>
 <h5>Marcus E. Lower, et al., (2020)</h5>
 <p><a href="http://www.astronomerstelegram.org/?read=13562">The Astronomer's Telegram #13562</a>.</p>
+<hr>
+<h4>The UTMOST pulsar timing programme II: Timing noise across the pulsar population</h4>
+<h5>Marcus E. Lower, et al., (2020)</h5>
+<p><a href="https://doi.org/10.1093/mnras/staa615">MNRAS 494 228</a>, <a href="https://arxiv.org/abs/2002.12481">arXiv: 2002.12481</a>.</p>
+<hr>
+<h4>The UTMOST Survey for Magnetars, Intermittent pulsars, RRATs and FRBs I: System description and overview</h4>
+<h5>Vivek Venkatraman Krishnan, et al., (2019)</h5>
+<p><a href="https://doi.org/10.1093/mnras/staa111">MNRAS 492 4752</a>, <a href="https://arxiv.org/abs/1905.02415">arXiv:1905.02415</a>.</p>
 <hr>
 <h4>FRB191223 found at UTMOST</h4>
 <h5>Vivek Gupta, et al., (2019)</h5>
@@ -132,14 +144,6 @@ Marcus Lower            </a>
 <h4>FRB190806 found at UTMOST</h4>
 <h5>Vivek Gupta, et al., (2019)</h5>
 <p><a href="http://www.astronomerstelegram.org/?read=12995">The Astronomer's Telegram #12995</a>.</p>
-<hr>
-<h4>The UTMOST pulsar timing programme II: Timing noise across the pulsar population</h4>
-<h5>Marcus E. Lower, et al., (2019)</h5>
-<p>Submitted to MNRAS.</p>
-<hr>
-<h4>The UTMOST Survey for Magnetars, Intermittent pulsars, RRATs and FRBs I: System description and overview</h4>
-<h5>Vivek Venkatraman Krishnan, et al., (2019)</h5>
-<p>Submitted to MNRAS, <a href="https://arxiv.org/abs/1905.02415">arXiv:1905.02415</a>.</p>
 <hr>
 <h4>Five new real-time detections of Fast Radio Bursts with UTMOST</h4>
 <h5>Wael Farah, et al., (2019)</h5>
