--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@ Marcus Lower            </a>
 <h2>News</h2>
 <p><div style="height:360px;width:95%;border:0px solid #333;font:14px/26px Helvetica Neue,Helvetica,Arial,sans-serif;overflow:auto;">
 <ul style="list-style-type:disc;">
-<!-- <li>Apr 24 2020: <i>Spectropolarimetric properties of Swift J1818.0-1607: a 1.4 s radio magnetar</i> submitted to ApJ Letters. Read the pre-print here - <a href="https://arxiv.org/abs/2004.X">arXiv:2004.X</a> </li> -->
+<li>May 15 2020: <a href="http://www.astronomerstelegram.org/?read=13737">ATel #13737</a> - We didn't see any radio emission during a chance observation of the X-ray pulsar binary IGR J18179-1621.</li>
+<li>May 8 2020: <a href="http://www.astronomerstelegram.org/?read=13715">ATel #13715</a>, FRB 200508 detected by UTMOST - first FRB seen by UTMOST in the new decade!
+<li>Apr 23 2020: <i>Spectropolarimetric properties of Swift J1818.0-1607: a 1.4 s radio magnetar</i> submitted to ApJ Letters. Read the pre-print here - <a href="https://arxiv.org/abs/2004.11522">arXiv:2004.11522</a>.</li>
 <li>Mar 25 2020: Multi-band follow up observations of the new magnetar with Parkes - <a href="http://www.astronomerstelegram.org/?read=13587">ATel #13587</a>. </li>
 <li>Mar 22 2020: <i>The Parkes Pulsar Timing Array Project: Second data release</i> accepted to PASA. Read the accepted manuscript here - <a href="https://arxiv.org/abs/2003.09780">arXiv:2003.09780</a>. </li>
 <li>Mar 17 2020: The new magentar <a href="http://www.astronomerstelegram.org/?read=13553">emits radio pulses</a>! We followed up this latest discovery by observing it with the MeerKAT telesope - <a href="http://www.astronomerstelegram.org/?read=13562">ATel #13562</a>. </li>
