--- a/pages/publications.html
+++ b/pages/publications.html
@@ -105,9 +105,17 @@ Marcus Lower            </a>
             <p>My full publication list can be found at the <a href="https://ui.adsabs.harvard.edu/search/q=%20author%3A%22Lower%2C%20Marcus%20E%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">NASA ADS</a>.</p>
 
 <hr>
+<h4>No radio counterpart for IGR J18179-1621 detected during a serendipitous VLBA observation</h4>
+<h5>Hao Ding, Adam T. Deller, Marcus E. Lower and Ryan M. Shannon, (2020)</h5>
+<p><a href="http://www.astronomerstelegram.org/?read=13737">The Astronomer's Telegram #13737</a>.</p>
+<hr>
+<h4>FRB200508 found at UTMOST</h4>
+<h5>Vivek Gupta, et al., (2020)</h5>
+<p><a href="http://www.astronomerstelegram.org/?read=13715">The Astronomer's Telegram #13715</a>.</p>
+<hr>
 <h4>Spectropolarimetric properties of Swift J1818.0−1607: a 1.4 s radio magnetar</h4>
 <h5>Marcus E. Lower, Ryan M. Shannon, Simon Johnston and Matthew Bailes (2020)</h5>
-<p>Submitted to Astrophys. J. Lett.</p>
+<p>Submitted to Astrophys. J. Lett., <a href="https://arxiv.org/abs/2004.11522">arXiv:2004.11522</a>.</p>
 <hr>
 <h4>The Parkes Pulsar Timing Array Project: Second data release</h4>
 <h5>Matthew Kerr, et al. (2020)</h5>
