Swift J1818 paper accepted

--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@ Marcus Lower            </a>
 <h2>News</h2>
 <p><div style="height:360px;width:95%;border:0px solid #333;font:14px/26px Helvetica Neue,Helvetica,Arial,sans-serif;overflow:auto;">
 <ul style="list-style-type:disc;">
+<li>Jun 1 2020: <i>Spectropolarimetric properties of Swift J1818.0-1607: a 1.4 s radio magnetar</i> accepted for publication in ApJ Letters. Read the accepted manuscript here - <a href="https://arxiv.org/abs/2004.11522">arXiv:2004.11522</a>.</li>
+<li>May 29 2020: <i>The MeerKAT Telescope as a Pulsar Facility: System verification and early science results from MeerTime</i> accepted to PASA. Read the manuscript here - <a href="https://arxiv.org/abs/2005.14366">arXiv:2005.14366</a>.</li>
 <li>May 15 2020: <a href="http://www.astronomerstelegram.org/?read=13737">ATel #13737</a> - We didn't see any radio emission during a chance observation of the X-ray pulsar binary IGR J18179-1621.</li>
-<li>May 8 2020: <a href="http://www.astronomerstelegram.org/?read=13715">ATel #13715</a>, FRB 200508 detected by UTMOST - first FRB seen by UTMOST in the new decade!
+<li>May 8 2020: <a href="http://www.astronomerstelegram.org/?read=13715">ATel #13715</a>, FRB 200508 detected by UTMOST - the first FRB seen by UTMOST in the new decade!
 <li>Apr 23 2020: <i>Spectropolarimetric properties of Swift J1818.0-1607: a 1.4 s radio magnetar</i> submitted to ApJ Letters. Read the pre-print here - <a href="https://arxiv.org/abs/2004.11522">arXiv:2004.11522</a>.</li>
 <li>Mar 25 2020: Multi-band follow up observations of the new magnetar with Parkes - <a href="http://www.astronomerstelegram.org/?read=13587">ATel #13587</a>. </li>
 <li>Mar 22 2020: <i>The Parkes Pulsar Timing Array Project: Second data release</i> accepted to PASA. Read the accepted manuscript here - <a href="https://arxiv.org/abs/2003.09780">arXiv:2003.09780</a>. </li>
