--- a/pages/publications.html
+++ b/pages/publications.html
@@ -105,6 +105,10 @@ Marcus Lower            </a>
             <p>My full publication list can be found at the <a href="https://ui.adsabs.harvard.edu/search/q=%20author%3A%22Lower%2C%20Marcus%20E%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">NASA ADS</a>.</p>
 
 <hr>
+<h4>Bayesian inference for compact binary coalescences with BILBY: Validation and application to the first LIGO-Virgo gravitational-wave transient catalogue</h4>
+<h5>Isobel Romero-Shaw, et al., (2020)</h5>
+<p>Submitted to MNRAS, <a href="https://arxiv.org/abs/2006.00714">arXiv:2006.00714</a>.</p>
+<hr>
 <h4>Spectropolarimetric properties of Swift J1818.0−1607: a 1.4 s radio magnetar</h4>
 <h5>Marcus E. Lower, Ryan M. Shannon, Simon Johnston and Matthew Bailes (2020)</h5>
 <p>Astrophys. J. Lett., in press, <a href="https://arxiv.org/abs/2004.11522">arXiv:2004.11522</a>.</p>
