--- a/pages/publications.html
+++ b/pages/publications.html
@@ -104,18 +104,43 @@ Marcus Lower            </a>
 
             <p>My full publication list can be found at the <a href="https://ui.adsabs.harvard.edu/search/q=%20author%3A%22Lower%2C%20Marcus%20E%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">NASA ADS</a>.</p>
 
+
+<hr>
+<h4>Gravitational-wave Constraints on the Equatorial Ellipticity of Millisecond Pulsars </h4>
+<h5>Rich Abbott, et al., (2020)</h5>
+<p><a href="https://iopscience.iop.org/article/10.3847/2041-8213/abb655">Astrophys. J. Lett. 902 L21</a>, <a href="https://arxiv.org/abs/2007.14251">arXiv:2007.14251</a>.</p>
 <hr>
 <h4>Bayesian inference for compact binary coalescences with BILBY: Validation and application to the first LIGO-Virgo gravitational-wave transient catalogue</h4>
 <h5>Isobel Romero-Shaw, et al., (2020)</h5>
-<p>Submitted to MNRAS, <a href="https://arxiv.org/abs/2006.00714">arXiv:2006.00714</a>.</p>
+<p>MNRAS in press, <a href="https://arxiv.org/abs/2006.00714">arXiv:2006.00714</a>.</p>
 <hr>
-<h4>Spectropolarimetric properties of Swift J1818.0−1607: a 1.4 s radio magnetar</h4>
-<h5>Marcus E. Lower, Ryan M. Shannon, Simon Johnston and Matthew Bailes (2020)</h5>
-<p>Astrophys. J. Lett., in press, <a href="https://arxiv.org/abs/2004.11522">arXiv:2004.11522</a>.</p>
+<h4>VLBA detection of Swift J1818.0-1607</h4>
+<h5>Hao Ding, et al. (2020)</h5>
+<p><a href="http://www.astronomerstelegram.org/?read=14005">The Astronomer's Telegram #14005</a>.</p>
+<hr>
+<h4>A magnetar parallax</h4>
+<h5>Hao Ding, et al. (2020)</h5>
+<p><a href="https://academic.oup.com/mnras/article-abstract/498/3/3736/5895346?redirectedFrom=fulltext">MNRAS 498 3736</a>, <a href="https://arxiv.org/abs/2008.06438">arXiv:2008.06438</a>.</p>
 <hr>
 <h4>The MeerKAT Telescope as a Pulsar Facility: System verification and early science results from MeerTimer</h4>
 <h5>Matthew Bailes, et al., (2020)</h5>
-<p>Publ. Astron. Soc. Aust., in press, <a href="https://arxiv.org/abs/2005.14366">arXiv:2005.14366</a>.</p>
+<p><a href="https://www.cambridge.org/core/journals/publications-of-the-astronomical-society-of-australia/article/meerkat-telescope-as-a-pulsar-facility-system-verification-and-early-science-results-from-meertime/A0ED62920EA3207804981FA721B912DF">Publ. Astron. Soc. Aust. 37 e028</a>, <a href="https://arxiv.org/abs/2005.14366">arXiv:2005.14366</a>.</p>
+<hr>
+<h4>The Parkes Pulsar Timing Array Project: Second data release</h4>
+<h5>Matthew Kerr, et al. (2020)</h5>
+<p><a href="https://www.cambridge.org/core/journals/publications-of-the-astronomical-society-of-australia/article/parkes-pulsar-timing-array-project-second-data-release/6F6DF02ED3B1D8FCAFBB0E259ABB2402">Publ. Astron. Soc. Aust. 37 e020</a>, <a href="https://arxiv.org/abs/2003.09780">arXiv:2003.09780</a>.</p>
+<hr>
+<h4>Resurgence in the radio flux of the magnetar XTE J1810-197</h4>
+<h5>Marcus E. Lower, et al., (2020)</h5>
+<p><a href="http://www.astronomerstelegram.org/?read=13840">The Astronomer's Telegram #13840</a>.</p>
+<hr>
+<h4>FRB200607 found at UTMOST</h4>
+<h5>Vivek Gupta, et al., (2020)</h5>
+<p><a href="http://www.astronomerstelegram.org/?read=13788">The Astronomer's Telegram #13788</a>.</p>
+<hr>
+<h4>Spectropolarimetric properties of Swift J1818.0−1607: a 1.4 s radio magnetar</h4>
+<h5>Marcus E. Lower, Ryan M. Shannon, Simon Johnston and Matthew Bailes (2020)</h5>
+<p><a href="https://iopscience.iop.org/article/10.3847/2041-8213/ab9898">Astrophys. J. Lett. 896 L37</a>, <a href="https://arxiv.org/abs/2004.11522">arXiv:2004.11522</a>.</p>
 <hr>
 <h4>No radio counterpart for IGR J18179-1621 detected during a serendipitous VLBA observation</h4>
 <h5>Hao Ding, Adam T. Deller, Marcus E. Lower and Ryan M. Shannon, (2020)</h5>
@@ -124,10 +149,6 @@ Marcus Lower            </a>
 <h4>FRB200508 found at UTMOST</h4>
 <h5>Vivek Gupta, et al., (2020)</h5>
 <p><a href="http://www.astronomerstelegram.org/?read=13715">The Astronomer's Telegram #13715</a>.</p>
-<hr>
-<h4>The Parkes Pulsar Timing Array Project: Second data release</h4>
-<h5>Matthew Kerr, et al. (2020)</h5>
-<p>Publ. Astron. Soc. Aust., in press, <a href="https://arxiv.org/abs/2003.09780">arXiv:2003.09780</a>.</p>
 <hr>
 <h4>Multi-band observations of Swift J1818.0−1607 with Parkes</h4>
 <h5>Marcus E. Lower and Ryan M. Shannon (2020)</h5>
