--- a/pages/publications.html
+++ b/pages/publications.html
@@ -106,6 +106,10 @@ Marcus Lower            </a>
 
 
 <hr>
+<h4>The dynamic magnetosphere of Swift J1818.0-1607</h4>
+<h5>Marcus E. Lower, et al. (2020)</h5>
+<p>Submitted to MNRAS.</p>
+<hr>
 <h4>Gravitational-wave Constraints on the Equatorial Ellipticity of Millisecond Pulsars </h4>
 <h5>Rich Abbott, et al., (2020)</h5>
 <p><a href="https://iopscience.iop.org/article/10.3847/2041-8213/abb655">Astrophys. J. Lett. 902 L21</a>, <a href="https://arxiv.org/abs/2007.14251">arXiv:2007.14251</a>.</p>
