--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Marcus Lower            </a>
 <!-- Banner -->
 <style>
 	#banner{
-	    background-image:url("images/Molonglo.png");
+	    background-image:url("images/Background.jpg");
 	}
 </style>
 
@@ -105,6 +105,8 @@ Marcus Lower            </a>
 <h2>News</h2>
 <p><div style="height:360px;width:95%;border:0px solid #333;font:14px/26px Helvetica Neue,Helvetica,Arial,sans-serif;overflow:auto;">
 <ul style="list-style-type:disc;">
+<li>Dec 4 2020: My 3rd PhD paper, <i>The dynamic magnetosphere of Swift J1818.0-1607</i>, has been accepted to MNRAS. You can read the accepted manuscript here: <a href="https://arxiv.org/abs/2011.12463">arXiv:2011.12463</a>.
+<li>Oct 30 2020: <i>The dynamic magnetosphere of Swift J1818.0-1607</i> submitted to MNRAS. </li>
 <li>Sep 21 2020: <i>Bayesian inference for compact binary coalescences with Bilby: Validation and application to the first LIGO–Virgo gravitational-wave transient catalogue</i> accepted to MNRAS. Read the accepted manuscript here - <a href="https://arxiv.org/abs/2006.00714">arXiv:2006.00714</a>.</li>
 <li>Sep 16 2020: A great press release covering the first magnetar parallax measurement made with the <a href="https://public.nrao.edu/telescopes/vlba/"><i>Very Long Baseline Array</i></a> was posted on the NRAO website: <a href="https://public.nrao.edu/news/distance-measurement-magnetar/"><i>"VLBA Makes First Direct Distance Measurement to Magnetar"</i></a>.
 <li>Sep 11 2020: <a href="http://www.astronomerstelegram.org/?read=14005">ATel #14005</a> -  We detected the new magnetar Swift J1818.0-1607 with the VLBA!</li>
