--- a/pages/about.html
+++ b/pages/about.html
@@ -79,7 +79,7 @@ Marcus Lower            </a>
 <!-- Banner -->
 <style>
 	#banner{
-	    background-image:url("../images/Molonglo.png");
+	    background-image:url("../images/Background.jpg");
 	}
 </style>
 
