--- a/pages/my-research.html
+++ b/pages/my-research.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Background.jpg<!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
     <title>My Research - Marcus Lower</title>
@@ -79,7 +79,7 @@ Marcus Lower            </a>
 <!-- Banner -->
 <style>
 	#banner{
-	    background-image:url("../images/Molonglo.png");
+	    background-image:url("../images/Background.jpg");
 	}
 </style>
 
@@ -121,7 +121,7 @@ Marcus Lower            </a>
 <h3>Magnetars</h3>
 <figure>
     <img src="../images/Magnetar.jpg" alt="missing" width="520" />
-    <figcaption>Illustration of a magnetar in outburst. Credit: Mark Garlick Getty Images.</figcaption>
+    <figcaption>Illustration of a magnetar in outburst. Credit: Carl Knox/OzGrav.</figcaption>
 </figure>
 <p></p>
 <p>Magnetars are a class of slowly rotating neutron stars which posses the most powerful magnetic fields in the known universe. Many of these objects have been observed to emit extremely energetic x-ray and gamma-ray bursts. Of the 24 known magentars (see: <a href="http://www.physics.mcgill.ca/~pulsar/magnetar/main.html">the McGill magnetar catalogue</a>), we have only ever observed 5 that emit pulsed radio emission similar to pulsars. These "radio loud" magnetars display large variations in their brightness and rotational stability over times, in addition to emitting remarkable millisecond-in-width spikes in their single-pulses.</p>
