--- a/pages/publications.html
+++ b/pages/publications.html
@@ -79,7 +79,7 @@ Marcus Lower            </a>
 <!-- Banner -->
 <style>
 	#banner{
-	    background-image:url("../images/Molonglo.png");
+	    background-image:url("../images/Background.jpg");
 	}
 </style>
 
@@ -107,8 +107,8 @@ Marcus Lower            </a>
 
 <hr>
 <h4>The dynamic magnetosphere of Swift J1818.0-1607</h4>
-<h5>Marcus E. Lower, et al. (2020)</h5>
-<p>Submitted to MNRAS.</p>
+<h5>Marcus E. Lower, Simon Johnston, Ryan M. Shannon, Matthew Bailes and Fernando Camilo (2020)</h5>
+<p>MNRAS (in press), <a href="https://arxiv.org/abs/2011.12463">arXiv:2011.12463</a>.</p>
 <hr>
 <h4>Gravitational-wave Constraints on the Equatorial Ellipticity of Millisecond Pulsars </h4>
 <h5>Rich Abbott, et al., (2020)</h5>
@@ -119,7 +119,7 @@ Marcus Lower            </a>
 <p>MNRAS in press, <a href="https://arxiv.org/abs/2006.00714">arXiv:2006.00714</a>.</p>
 <hr>
 <h4>VLBA detection of Swift J1818.0-1607</h4>
-<h5>Hao Ding, et al. (2020)</h5>
+<h5>Hao Ding, Adam T. Deller, Marcus E. Lower and Ryan M. Shannon (2020)</h5>
 <p><a href="http://www.astronomerstelegram.org/?read=14005">The Astronomer's Telegram #14005</a>.</p>
 <hr>
 <h4>A magnetar parallax</h4>
