Big Sept 4 2021 update

--- a/index.html
+++ b/index.html
@@ -105,10 +105,24 @@ Marcus Lower            </a>
 <h2>News</h2>
 <p><div style="height:360px;width:95%;border:0px solid #333;font:14px/26px Helvetica Neue,Helvetica,Arial,sans-serif;overflow:auto;">
 <ul style="list-style-type:disc;">
+<li>Aug 21 2021: Technical document posted to arXiv on <i>A phenomenological model for measuring generalised Faraday rotation</i>. Check it out <a href="https://arxiv.org/abs/2108.09429">here</a>! </li>
+<li>Aug 5 2021: A short paper by Johston and Lower, <i>A supernova remnant association for the fast-moving pulsar PSR J0908-4913</i> was published in MNRAS Letters! Read the accepted manuscript here - <a href="https://arxiv.org/abs/2108.09827">arXiv:2108.09827</a>. </li>
+<li>Jul 28 2021: This week I am attending the <a href="https://sites.google.com/view/frb2021/home">FRB 2021 conference</a>. </li>
+<li>Jul 25 2021: The Parkes Pulsar Timing Array weighs in on the common signal detected among millisecond pulsars! A fantastic paper, <i>On the Evidence for a Common-spectrum Process in the Search for the Nanohertz Gravitational-wave Background with the Parkes Pulsar Timing Array</i>, led by Boris Goncharov was accepted to ApJ Letters. Read the accepted manuscript here - <a href="https://arxiv.org/abs/2107.12112">arXiv:2107.12112</a>. </li>
+<li>Jul 24 2021: A new glitch in the Vela pulsar was detected by Liam Dunn with the Molonglo North-South system! Read about it here - <a href="https://www.astronomerstelegram.org/?read=14807">ATel #14807</a>. </li>
+<li>Jul 19 2021: This week I am attending the <i><a href="https://www.amaldi14.org/">14th Edoardo Amaldi Conference on Gravitational Waves</a></i>, where I am again talking about the Double Pulsar eclipses.</a>. </li>
+<li>Jul 16 2021: My poster at the 2021 ASA meeting (<a href="./files/P574_glitchy_psrs.pdf"><i>How do young pulsars spin down?</i></a>) won 3rd place in the student poster prize! </li>
+<li>Jul 12 2021: This week I am attending the <a href="https://blogs.unimelb.edu.au/asa2021/">2021 annual general meeting of the Astronomical Society of Australia</a>.</li>
+<li>Jun 21 2021: This week I am attending the <a href="http://ipta4gw.org/meetings/2021/">2021 IPTA Science Week</a>, where I giving a talk about observations of the Double Pulsar eclipses with MeerKAT. </li>
+<li>Apr 26 2021: I'm up in Sydney this week as the active Duty Astronomer for the <a =href="https://www.narrabri.atnf.csiro.au/">Australia Telescope Compact Array</a>. </li>
+<li>Apr 14 2021: <i>Effects of periodicity in observation scheduling on parameter estimation of pulsar glitches</i> by Dunn, Lower and Melatos accepted to MNRAS. Read the accepted manuscript here - <a href="https://arxiv.org/abs/2104.07363">arXiv:2104.07363</a>. </li>
+<li>Mar 30 2021: <i>FRB 20210630A found by UTMOST! Read about it here - <a href="https://www.astronomerstelegram.org/?read=14745">ATel #14745</a>.</li>
 <li>Mar 6 2021: <i>Multi-frequency observations of SGR J1935+2154</i> accepted to MNRAS. </li>
+<li>Mar 3 2021: FRB 20210303A found by UTMOST, Molonglo's 1st FRB of 2021! Read about it here - <a href="https://www.astronomerstelegram.org/?read=14434">ATel #14434</a>. </li>
 <li>Feb 9 2021: <i>The Relativistic Binary Programme on MeerKAT: Science objectives and first results</i> accepted to MNRAS. Read the accepted manuscript here - <a href="https://arxiv.org/abs/2102.05160">arXiv:2102.05160</a>. </li>
 <li>Feb 2 2021: My recent work on the dynamic magnetopshere of Swift J1818.0−1607 was featured in The Age, <a href="https://www.theage.com.au/national/unlocking-the-secrets-of-one-of-the-universe-s-strongest-magnets-20210201-p56yjc.html
 "><i>Unlocking the secrets of one of the universe’s strongest magnets</i></a>. </li>
+<li>Jan 26 2021: Non-detection of radio pulses from GRB 210119A/Swift J1851.2-6148 with Parkes, <a href="https://www.astronomerstelegram.org/?read=14347">ATel #14347</a>.</li>
 <li>Dec 4 2020: My 3rd PhD paper, <i>The dynamic magnetosphere of Swift J1818.0−1607</i>, has been accepted to MNRAS. You can read the accepted manuscript here: <a href="https://arxiv.org/abs/2011.12463">arXiv:2011.12463</a>.
 <li>Oct 30 2020: <i>The dynamic magnetosphere of Swift J1818.0−1607</i> submitted to MNRAS. </li>
 <li>Sep 21 2020: <i>Bayesian inference for compact binary coalescences with Bilby: Validation and application to the first LIGO–Virgo gravitational-wave transient catalogue</i> accepted to MNRAS. Read the accepted manuscript here - <a href="https://arxiv.org/abs/2006.00714">arXiv:2006.00714</a>.</li>
