--- a/pages/publications.html
+++ b/pages/publications.html
@@ -105,13 +105,46 @@ Marcus Lower            </a>
             <p>My full publication list can be found at the <a href="https://ui.adsabs.harvard.edu/search/q=%20author%3A%22Lower%2C%20Marcus%20E%22&sort=date%20desc%2C%20bibcode%20desc&p_=0">NASA ADS</a>.</p>
 
 <hr>
-<h4>Multi-frequency observations of SGR J1935+2154</h4>
-<h5>Matthew Bailes, et al., (2021)</h5>
-<p>MNRAS (accepted).</p>
+<h4></h4>
+<h4>A phenomenological model for measuring generalised Faraday rotation</h4>
+<h5>Marcus E. Lower, (2021)</h5>
+<p>Posted to <a href="https://arxiv.org/abs/2108.09429">arXiv:2108.09429</a>.</p>
+<hr>
+<h4>A supernova remnant association for the fast-moving pulsar PSR J0908–4913 </h4>
+<h5>Simon Johnston and Marcus E. Lower, (2021)</h5>
+<p><a href="https://doi.org/10.1093/mnrasl/slab092">MNRAS Lett. 507 L41</a>, <a href="https://arxiv.org/abs/2108.09827">arXiv:2108.09827</a>.</p>
+<hr>
+<h4>On the Evidence for a Common-spectrum Process in the Search for the Nanohertz Gravitational-wave Background with the Parkes Pulsar Timing Array</h4>
+<h5>Boris Goncharov, et al., (2021)</h5>
+<p><a href="https://doi.org/10.3847/2041-8213/ac17f4">Astrophys. J. Lett. 917 L19</a>, <a href="https://arxiv.org/abs/2107.12112">arXiv:2107.12112</a>.</p>
+<hr>
+<h4>FRB 20210630A found by UTMOST</h4>
+<h5>Liam Dunn, et al., (2021)</h5>
+<p><a href="https://www.astronomerstelegram.org/?read=14807">The Astronomer's Telegram #14807</a>.</p>
+<hr>
+<h4>Effects of periodicity in observation scheduling on parameter estimation of pulsar glitches</h4>
+<h5>Liam Dunn, Marcus E. Lower and Andrew Melatos, (2021)</h5>
+<p><a href="https://doi.org/10.1093/mnras/stab1097">MNRAS 504 3399</a>, <a href="https://arxiv.org/abs/2104.07363">arXiv:2104.07363</a>.</p>
 <hr>
 <h4>The Relativistic Binary Programme on MeerKAT: Science objectives and first results</h4>
 <h5>Michael Kramer, et al., (2021)</h5>
-<p>MNRAS (in press), <a href="https://arxiv.org/abs/2102.05160">arXiv:2102.05160</a></p>
+<p><a href="https://doi.org/10.1093/mnras/stab375">MNRAS 504 2094</a>, <a href="https://arxiv.org/abs/2102.05160">arXiv:2102.05160</a></p>
+<hr>
+<h4>Multi-frequency observations of SGR J1935+2154</h4>
+<h5>Matthew Bailes, et al., (2021)</h5>
+<p><a href="https://doi.org/10.1093/mnras/stab749">MNRAS 503 5367</a>, <a href="https://arxiv.org/abs/2103.06052">arXiv:2103.06052</a>.</p>
+<hr>
+<h4>FRB 20210630A found by UTMOST</h4>
+<h5>Ayushi Mandlik, et al., (2021)</h5>
+<p><a href="https://www.astronomerstelegram.org/?read=14745">The Astronomer's Telegram #14745</a>.</p>
+<hr>
+<h4>FRB 20210303A found by UTMOST</h4>
+<h5>Ayushi Mandlik, et al., (2021)</h5>
+<p><a href="https://www.astronomerstelegram.org/?read=14434">The Astronomer's Telegram #14434</a>.</p>
+<hr>
+<h4>Non-detection of radio pulses from GRB 210119A/Swift J1851.2-6148 with Parkes</h4>
+<h5>Marcus E. Lower, Rahul Sengar, Pravir Kumar and Ryan M. Shannon, (2021)</h5>
+<p><a href="https://www.astronomerstelegram.org/?read=14347">The Astronomer's Telegram #14347</a>.</p>
 <hr>
 <h4>The dynamic magnetosphere of Swift J1818.0-1607</h4>
 <h5>Marcus E. Lower, Simon Johnston, Ryan M. Shannon, Matthew Bailes and Fernando Camilo, (2021)</h5>
