Post PhD update

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Marcus Lower            </a>
 	<div class="container">
 		<div class="copy">
 			<h1>Marcus Lower</h1>
-				<p class="intro"> PhD Candidate (Astrophysics) </p>
+				<p class="intro"> Astrophysicist </p>
 		</div>
 	</div>
 </div><!-- End Banner -->
@@ -99,12 +99,22 @@ Marcus Lower            </a>
      alt="photo"
      style="float: right; margin-left: 15px; margin-bottom: 15px"
      width="180" /></p>
-<p>I am a PhD student at the <a href="http://astronomy.swin.edu.au">Centre for Astrophysics and Supercomputing</a> at <a href="http://www.swinburne.edu.au">Swinburne University of Technology</a> and the <a href="https://www.csiro.au/en/Research/Astronomy">CSIRO Astronomy and Space Science</a> institute. My work primarily involves developing and using Bayesian inference techniques to learn more about the properties of pulsars - rotating neutron stars that emit beams of electromagnetic radiation from their magnetic poles.</p>
-<p>I am also interested in the follow-up parameter estimation of gravitational-wave events seen by Advanced LIGO and Virgo, and searches for a stochastic gravitational-wave background with pulsar timing arrays.</p>
+<p>Welcome to my website! I am a postdoctoral research fellow at <a href="https://www.csiro.au/en/Research/Astronomy">CSIRO Astronomy and Space Science</a>.
+  My work primarily involves developing and using Bayesian inference techniques to learn more about the properties of pulsars - rotating neutron stars that emit beams of electromagnetic radiation from their magnetic poles.
+  I am also the priniciple investigator of the Parkes `P574' young pulsar timing project, which uses the CSIRO 64-m Parkes radio telescope (AKA `Murriyang') to monitor 270 energectic pulsars.
+</p>
+<p>Other interests of mine include follow-up parameter estimation of gravitational-wave events seen by Advanced LIGO and Virgo, and searches for the stochastic gravitational-wave background with pulsar timing arrays.</p>
 <hr>
 <h2>News</h2>
 <p><div style="height:360px;width:95%;border:0px solid #333;font:14px/26px Helvetica Neue,Helvetica,Arial,sans-serif;overflow:auto;">
 <ul style="list-style-type:disc;">
+<li>Nov 19 2021: I gave a talk on my recent paper on glitchy pulsars to the Monash gravitaional-wave research group. I was formerly a member of this group during my undergrad and honours years at Monash!</li>
+<li>Nov 16 2021: This evening I presented my work on the apparent braking of glitchy pulsars to the Oxford Pulsar group!</li>
+<li>Nov 8 2021: A warm welcome to the CSIRO Space and Astronomy community via the <a href="https://www.atnf.csiro.au/ATNF-DailyImage/archive/2021/08-Nov-2021.html">ATNF Daily Astronomy Picture</a>!</li>
+<li>Oct 18 2021: I have started my new postdoctoral research position at <a href="https://www.csiro.au/en/Research/Astronomy">CSIRO Astronomy and Space Science</a>! For the next 3 years I'll be working on studying young pulsars and magnetars observed primarily with the Parkes radio telescope.</li>
+<li>Oct 4 2021: After 3-and-a-bit years, 4 published papers and two-(ish) still in prep., I have submitted my PhD thesis! This couldn't have been done without the support of my PhD advisors, nor my dozens of friend and colleagues at Swinburne, CSIRO and MeerTime collaborators.</li>
+<li>Sep 23 2021: <i>Circularly polarized radio emission from the repeating fast radio burst source FRB 20201124A</i> submitted to MNRAS. Read the pre-print here - <a href="https://arxiv.org/abs/2109.11535">arXiv:2109.11535</a>.</li>
+<li>Sep 15 2021: The fourth and final publication of my PhD, <i>The impact of glitches on young pulsar rotational evolution</i> was accepted to MNRAS! Read the accepted manuscript here - <a href="https://arxiv.org/abs/2109.07612">arXiv:2109.07612</a>.</li>
 <li>Aug 21 2021: Technical document posted to arXiv on <i>A phenomenological model for measuring generalised Faraday rotation</i>. Check it out <a href="https://arxiv.org/abs/2108.09429">here</a>! </li>
 <li>Aug 5 2021: A short paper by Johston and Lower, <i>A supernova remnant association for the fast-moving pulsar PSR J0908-4913</i> was published in MNRAS Letters! Read the accepted manuscript here - <a href="https://arxiv.org/abs/2108.09827">arXiv:2108.09827</a>. </li>
 <li>Jul 28 2021: This week I am attending the <a href="https://sites.google.com/view/frb2021/home">FRB 2021 conference</a>. </li>
