--- a/pages/cv.html
+++ b/pages/cv.html
@@ -87,7 +87,7 @@ Marcus Lower            </a>
 	<div class="container">
 		<div class="copy">
 			<h1>Marcus Lower</h1>
-				<p class="intro">PhD Candidate (Astrophysics)</p>
+				<p class="intro"> Astrophysicist </p>
 		</div>
 	</div>
 </div><!-- End Banner -->
@@ -103,11 +103,16 @@ Marcus Lower            </a>
             <p>Full version of my CV can be found <a href="../files/Marcus_Lower_CV.pdf">here</a>.</p>
 <h1>Education</h1>
 <ul>
-<li>PhD Candidate, Astrophysics, Swinburne University of Technology and CSIRO Astonomy and Space Science, 2018-present</li>
-<li>BSc with 1st class honours in Astrophysics, Monash University, 2017-2018</li>
+<li>PhD, Astrophysics, Swinburne University of Technology and CSIRO Space and Astonomy, 2018-2021</li>
+<li>BSc with 1st class honours in Astrophysics, Monash University, 2017</li>
 <li>BSc majoring in Astrophysics and Applied Mathematics, Monash University, 2014-2017</li>
 </ul>
 <h1>Academic Experience</h1>
+<ul>
+<li>2021-present: Postdoctoral Research Fellow, CSIRO Space and Astronomy</li>
+<li>Supervisors: Dr. Simon Johnston and Dr. Elizabeth Mahony</li>
+</ul>
+<p><br></p>
 <ul>
 <li>2018: Research Intern, Swinburne University of Technology</li>
 <li>Supervisors: Prof. Matthew Bailes, Dr. Ryan Shannon, Dr. Adam Deller and Dr. Chris Flynn.</li>
