--- a/pages/publications.html
+++ b/pages/publications.html
@@ -87,7 +87,7 @@ Marcus Lower            </a>
 	<div class="container">
 		<div class="copy">
 			<h1>Marcus Lower</h1>
-				<p class="intro">PhD Candidate (Astrophysics)</p>
+				<p class="intro"> Astrophysicist </p>
 		</div>
 	</div>
 </div><!-- End Banner -->
@@ -106,6 +106,14 @@ Marcus Lower            </a>
 
 <hr>
 <h4></h4>
+<h4>The impact of glitches on young pulsar rotational evolution</h4>
+<h5>Marcus E. Lower, et al. (2021)</h5>
+<p><a href="https://doi.org/10.1093/mnras/stab2678">MNRAS 508 3251</a>, <a href="https://arxiv.org/abs/2109.07612">arXiv:2109.07612</a>.</p>
+<hr>
+<h4>Circularly polarized radio emission from the repeating fast radio burst source FRB 20201124A</h4>
+<h5>Pravir Kumar, Ryan M. Shannon, Marcus E. Lower, Shivani Bhandari, Adam T. Deller, Chris Flynn, Evan F. Keane (2021)</h5>
+<p>Submitted to MNRAS, <a href="https://arxiv.org/abs/2109.11535">arXiv:2109.11535</a>.</p>
+<hr>
 <h4>A phenomenological model for measuring generalised Faraday rotation</h4>
 <h5>Marcus E. Lower, (2021)</h5>
 <p>Posted to <a href="https://arxiv.org/abs/2108.09429">arXiv:2108.09429</a>.</p>
