--- a/pages/handy-terminal-commands.html
+++ b/pages/handy-terminal-commands.html
@@ -84,7 +84,7 @@ Marcus Lower            </a>
 	<div class="container">
 		<div class="copy">
 			<h1>Marcus Lower</h1>
-				<p class="intro">PhD Candidate (Astrophysics)</p>
+				<p class="intro"> Astrophysicist </p>
 		</div>
 	</div>
 </div><!-- End Banner -->
