--- a/pages/my-research.html
+++ b/pages/my-research.html
@@ -87,7 +87,7 @@ Marcus Lower            </a>
 	<div class="container">
 		<div class="copy">
 			<h1>Marcus Lower</h1>
-				<p class="intro">PhD Candidate (Astrophysics)</p>
+				<p class="intro"> Astrophysicist </p>
 		</div>
 	</div>
 </div><!-- End Banner -->
